--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -18,13 +18,13 @@ pipeline {
             steps {
                 script {
                     try {
-                        bat "docker stop travelix"
-                        bat "docker rm travelix"
+                        bat "docker stop ${IMAGE_NAME}"
+                        bat "docker rm ${IMAGE_NAME}"
                     } catch (Exception e) {
                         echo 'No existing container to remove.'
                     }
 
-                    docker.image("${IMAGE_NAME}:${env.BUILD_ID}").run('-d --name travelix -p 3000:80')
+                    docker.image("${IMAGE_NAME}:${env.BUILD_ID}").run("-d --name ${IMAGE_NAME} -p 3000:80")
                 }
             }
         }
@@ -55,8 +55,8 @@ pipeline {
             cleanWs()
             script {
                 try {
-                    bat "docker stop react_app"
-                    bat "docker rm react_app"
+                    bat "docker stop ${IMAGE_NAME}"
+                    bat "docker rm ${IMAGE_NAME}"
                 } catch (Exception e) {
                     echo 'No existing container to stop or remove.'
                 }
