--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,32 @@
-version: '1.2'
+version: '1.0'
 services: 
+  react:
+    build: .
+    container_name: react
+    ports:
+      - "3000:3000"
+    networks:
+      - zap-network
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      
   zap:
     container_name: zap-container
     build: 
         context: ./docker/zap
         dockerfile: Dockerfile
     ports:
-      - "8082:8080"
+      - "8082:8082"
     volumes:
       - C:\Users\Karthick\Documents\Concord\Learning\travelix:C:\zap\reports
     depends_on:
-      - web
+      - react
     networks:
       - zap-network
 
-  web:
-    build: .
-    container_name: web
-    ports:
-      - "3000:3000"
-    networks:
-      - zap-network
-  
 networks:
   zap-network: 
+#     driver: bridge
   
 # version: '1'
 # services: 
